; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_dsp56k.c_dsp56k_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_dsp56k.c_dsp56k_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@sound_ym = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @dsp56k_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dsp56k_reset() #0 {
  %1 = alloca i32, align 4
  store i32 14, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sound_ym, i32 0, i32 0), align 4
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sound_ym, i32 0, i32 0), align 4
  %3 = and i32 %2, 239
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sound_ym, i32 0, i32 1), align 4
  %5 = load i32, i32* %1, align 4
  %6 = or i32 %5, 16
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sound_ym, i32 0, i32 1), align 4
  %7 = call i32 @udelay(i32 10)
  store i32 14, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sound_ym, i32 0, i32 0), align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sound_ym, i32 0, i32 0), align 4
  %9 = and i32 %8, 239
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sound_ym, i32 0, i32 1), align 4
  ret i32 0
}

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
